# qml-image-example

./: CMakeLists.txt  build.ps1
qml/: main.qml
src/: image_item.cpp  image_item.hpp  main.cpp  renderer.cpp  renderer.hpp
